Build gulp things on CI instead of on deploy

--- a/circle.yml
+++ b/circle.yml
@@ -22,12 +22,12 @@ deployment:
   dev:
     branch: master
     commands:
-        # Create version info
+        - npm run build
         - npm run record-build-info:
             environment:
                 BUILD_NUMBER: $CIRCLE_BUILD_NUM
                 GIT_REF: $CIRCLE_SHA1
-        - git add --force --verbose build-info.json
+        - git add --force --verbose public build-info.json
         - git config user.name "Circle CI"
         - git config user.email "circle@circleci.com"
         - |
