--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "moment": "^2.18.1",
     "ncp": "^2.0.0",
     "node-sass": "^4.5.3",
+    "node-sass-middleware": "^0.11.0",
     "nodemon": "^1.12.1",
     "on-finished": "^2.3.0",
     "passport": "^0.3.2",
