updated jade to pug, added dashboard first iteration

--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "govuk_frontend_toolkit": "^5.2.0",
     "govuk_template_jinja": "^0.19.2",
     "helmet": "^3.5.0",
-    "jade": "^1.11.0",
     "jquery": "^1.12.4",
     "moment": "^2.18.1",
     "ncp": "^2.0.0",
@@ -72,6 +71,7 @@
     "pg": "^6.1.2",
     "poll-endpoint-for": "0.0.3",
     "prompt": "^1.0.0",
+    "pug": "^2.0.0-rc.4",
     "request-promise": "^4.1.1",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.2.2",
