--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "lint": "eslint .",
     "record-build-info": "node ./bin/record-build-info",
     "wait-for-deploy": "node ./bin/wait-for-deploy",
-    "prepublish": "npm run snyk-protect",
-    "build": "npm run clean && npm run css-build",
-    "dev": "npm run build && npm run lint && npm run test && npm run start-watchmode",
+    "prepublish": "yarn run snyk-protect",
+    "build": "yarn run clean && yarn run css-build",
+    "dev": "yarn run build && yarn run lint && yarn run test && yarn run start-watchmode",
     "css-build": "./bin/build-css",
     "clean": "rm -rf public/* .port.tmp *.log build/* uploads/* test-results.xml",
     "start-watchmode": "nodemon --watch server server.js"
