--- a/package.json
+++ b/package.json
@@ -1,105 +1,112 @@
 {
-  "name": "licences",
-  "version": "0.1.0",
-  "description": "Licences Application",
-  "main": "server.js",
-  "engines": {
-    "node": "8.4.0"
-  },
-  "scripts": {
-    "start": "node server.js",
-    "test": "mocha",
-    "snyk-protect": "snyk protect",
-    "lint": "eslint .",
-    "record-build-info": "node ./bin/record-build-info",
-    "wait-for-deploy": "node ./bin/wait-for-deploy",
-    "prepublish": "npm run snyk-protect",
-    "build": "npm run clean && npm run css-build",
-    "dev": "npm run build && npm run lint && npm run test && npm run start-watchmode",
-    "css-build": "./bin/build-css",
-    "clean": "rm -rf public/* .port.tmp *.log build/* uploads/* test-results.xml",
-    "start-watchmode": "nodemon --watch server server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/noms-digital-studio/licences.git"
-  },
-  "author": "HMPPS Digital Studio",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/noms-digital-studio/licences/issues"
-  },
-  "homepage": "https://github.com/noms-digital-studio/licences#readme",
-  "dependencies": {
-    "applicationinsights": "^0.19.0",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
-    "babel-plugin-transform-es3-property-literals": "^6.22.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.4.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es3": "^1.0.1",
-    "bcryptjs": "^2.4.0",
-    "body-parser": "^1.16.0",
-    "case": "^1.5.2",
-    "compression": "^1.6.2",
-    "config": "^1.24.0",
-    "cookie-session": "^2.0.0-alpha.2",
-    "copyfiles": "^1.2.0",
-    "csurf": "^1.9.0",
-    "eslint": "^3.18.0",
-    "eslint-config-google": "^0.7.1",
-    "express": "^4.14.0",
-    "express-request-id": "^1.4.0",
-    "express-winston": "^2.3.0",
-    "git-rev-sync": "^1.9.0",
-    "govuk-elements-sass": "^3.0.2",
-    "govuk_frontend_toolkit": "^5.2.0",
-    "govuk_template_jinja": "^0.19.2",
-    "helmet": "^3.5.0",
-    "jquery": "^1.12.4",
-    "moment": "^2.18.1",
-    "ncp": "^2.0.0",
-    "node-sass": "^4.5.3",
-    "node-sass-middleware": "^0.11.0",
-    "nodemon": "^1.12.1",
-    "on-finished": "^2.3.0",
-    "passport": "^0.3.2",
-    "passport-oauth2": "^1.4.0",
-    "path": "^0.12.7",
-    "pg": "^6.1.2",
-    "poll-endpoint-for": "0.0.3",
-    "prompt": "^1.0.0",
-    "pug": "^2.0.0-rc.4",
-    "request-promise": "^4.1.1",
-    "require-dir": "^0.3.0",
-    "run-sequence": "^1.2.2",
-    "snyk": "^1.36.2",
-    "util": "^0.10.3",
-    "uuid": "^3.0.1",
-    "vinyl-source-stream": "^1.1.0",
-    "webpack": "^2.4.1",
-    "webpack-stream": "^3.2.0",
-    "winston": "^2.3.1",
-    "winston-azure-application-insights": "^1.1.1"
-  },
-  "devDependencies": {
-    "chai": "^3.5.0",
-    "chai-as-promised": "^6.0.0",
-    "gulp-spawn-mocha": "^3.1.0",
-    "istanbul": "^0.4.5",
-    "jsdom": "9.12.0",
-    "jsdom-global": "2.1.1",
-    "mocha": "^3.2.0",
-    "mocha-junit-reporter": "^1.13.0",
-    "nock": "^9.0.2",
-    "proxyquire": "^1.7.11",
-    "sinon": "^1.17.7",
-    "sinon-as-promised": "^4.0.3",
-    "sinon-chai": "^2.9.0",
-    "sinon-stub-promise": "^4.0.0",
-    "supertest": "^3.0.0"
-  },
-  "snyk": true
+    "name": "licences",
+    "version": "0.1.0",
+    "description": "Licences Application",
+    "main": "server.js",
+    "engines": {
+        "node": "8.4.0"
+    },
+    "scripts": {
+        "start": "node server.js",
+        "test": "mocha",
+        "snyk-protect": "snyk protect",
+        "lint": "eslint .",
+        "record-build-info": "node ./bin/record-build-info",
+        "wait-for-deploy": "node ./bin/wait-for-deploy",
+        "prepublish": "npm run snyk-protect",
+        "build": "npm run clean && npm run css-build",
+        "dev": "npm run build && npm run lint && npm run test && npm run start-watchmode",
+        "css-build": "./bin/build-css",
+        "clean": "rm -rf public/* .port.tmp *.log build/* uploads/* test-results.xml",
+        "start-watchmode": "nodemon --watch server server.js",
+        "knex": "knex",
+        "knex-migrate": "knex-migrate",
+        "migrate": "knex migrate:latest",
+        "seed": "knex seed:run"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/noms-digital-studio/licences.git"
+    },
+    "author": "HMPPS Digital Studio",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/noms-digital-studio/licences/issues"
+    },
+    "homepage": "https://github.com/noms-digital-studio/licences#readme",
+    "dependencies": {
+        "applicationinsights": "^0.19.0",
+        "babel-core": "^6.24.1",
+        "babel-loader": "^7.0.0",
+        "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
+        "babel-plugin-transform-es3-property-literals": "^6.22.0",
+        "babel-polyfill": "^6.23.0",
+        "babel-preset-env": "^1.4.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-es3": "^1.0.1",
+        "bcryptjs": "^2.4.0",
+        "body-parser": "^1.18.2",
+        "case": "^1.5.2",
+        "compression": "^1.6.2",
+        "config": "^1.24.0",
+        "cookie-session": "^2.0.0-alpha.2",
+        "copyfiles": "^1.2.0",
+        "csurf": "^1.9.0",
+        "eslint": "^3.18.0",
+        "eslint-config-google": "^0.7.1",
+        "express": "^4.15.5",
+        "express-request-id": "^1.4.0",
+        "express-winston": "^2.3.0",
+        "git-rev-sync": "^1.9.0",
+        "govuk-elements-sass": "^3.0.2",
+        "govuk_frontend_toolkit": "^5.2.0",
+        "govuk_template_jinja": "^0.19.2",
+        "helmet": "^3.5.0",
+        "jquery": "^1.12.4",
+        "knex": "^0.13.0",
+        "knex-migrate": "^1.3.0",
+        "moment": "^2.18.1",
+        "mssql": "^3.3.0",
+        "ncp": "^2.0.0",
+        "node-sass": "^4.5.3",
+        "node-sass-middleware": "^0.11.0",
+        "nodemon": "^1.12.1",
+        "on-finished": "^2.3.0",
+        "passport": "^0.3.2",
+        "passport-oauth2": "^1.4.0",
+        "path": "^0.12.7",
+        "pg": "^6.1.2",
+        "poll-endpoint-for": "0.0.3",
+        "prompt": "^1.0.0",
+        "pug": "^2.0.0-rc.4",
+        "request-promise": "^4.2.2",
+        "require-dir": "^0.3.0",
+        "run-sequence": "^1.2.2",
+        "snyk": "^1.41.1",
+        "util": "^0.10.3",
+        "uuid": "^3.0.1",
+        "vinyl-source-stream": "^1.1.0",
+        "webpack": "^2.4.1",
+        "webpack-stream": "^3.2.0",
+        "winston": "^2.3.1",
+        "winston-azure-application-insights": "^1.1.1"
+    },
+    "devDependencies": {
+        "chai": "^3.5.0",
+        "chai-as-promised": "^6.0.0",
+        "gulp-spawn-mocha": "^3.1.0",
+        "istanbul": "^0.4.5",
+        "jsdom": "9.12.0",
+        "jsdom-global": "2.1.1",
+        "mocha": "^3.2.0",
+        "mocha-junit-reporter": "^1.13.0",
+        "nock": "^9.0.20",
+        "proxyquire": "^1.7.11",
+        "sinon": "^1.17.7",
+        "sinon-as-promised": "^4.0.3",
+        "sinon-chai": "^2.9.0",
+        "sinon-stub-promise": "^4.0.0",
+        "supertest": "^3.0.0"
+    },
+    "snyk": true
 }
