--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "dev": "yarn run build && yarn run lint && yarn run test && yarn run start-watchmode",
     "css-build": "./bin/build-css",
     "clean": "rm -rf public/* .port.tmp *.log build/* uploads/* test-results.xml",
-    "start-watchmode": "nodemon --watch server server.js"
+    "start-watchmode": "nodemon --watch server server.js",
+    "knex": "knex",
+    "knex-migrate": "knex-migrate",
+    "migrate": "knex migrate:latest",
+    "seed": "knex seed:run"
   },
   "repository": {
     "type": "git",
@@ -59,7 +63,10 @@
     "govuk_template_jinja": "^0.19.2",
     "helmet": "^3.5.0",
     "jquery": "^1.12.4",
+    "knex": "^0.13.0",
+    "knex-migrate": "^1.3.0",
     "moment": "^2.18.1",
+    "mssql": "^3.3.0",
     "ncp": "^2.0.0",
     "node-sass": "^4.5.3",
     "node-sass-middleware": "^0.11.0",
