added ability to load env variables from a .env file in project route

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "cookie-session": "^2.0.0-alpha.2",
     "copyfiles": "^1.2.0",
     "csurf": "^1.9.0",
+    "dotenv": "^4.0.0",
     "eslint": "^3.18.0",
     "eslint-config-google": "^0.7.1",
     "express": "^4.14.0",
