--- a/package.json
+++ b/package.json
@@ -96,7 +96,8 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "chai-as-promised": "^6.0.0",
+    "chai-as-promised": "^7.1.1",
+    "dirty-chai": "^2.0.1",
     "gulp-spawn-mocha": "^3.1.0",
     "istanbul": "^0.4.5",
     "jsdom": "9.12.0",
