--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "govuk_template_jinja": "^0.19.2",
     "helmet": "^3.5.0",
     "jquery": "^1.12.4",
+    "jsonwebtoken": "^8.1.0",
     "knex": "^0.13.0",
     "knex-migrate": "^1.3.0",
     "moment": "^2.18.1",
@@ -75,6 +76,7 @@
     "nodemon": "^1.12.1",
     "on-finished": "^2.3.0",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "passport-oauth2": "^1.4.0",
     "path": "^0.12.7",
     "pg": "^6.1.2",
