--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "case": "^1.5.2",
     "compression": "^1.6.2",
     "config": "^1.24.0",
+    "connect-flash": "^0.1.1",
     "cookie-session": "^2.0.0-alpha.2",
     "copyfiles": "^1.2.0",
     "csurf": "^1.9.0",
