--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 .start.pid
 .port.tmp
 public
-assets/stylesheets
+assets/stylesheets/application.css
 lib/govuk_template.html
 govuk_modules
 node_modules/*
