--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "poll-endpoint-for": "0.0.3",
     "prompt": "^1.0.0",
     "pug": "^2.0.0-rc.4",
+    "ramda": "^0.25.0",
     "request-promise": "^4.1.1",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.2.2",
