--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "tedious": "^2.0.0",
     "util": "^0.10.3",
     "uuid": "^3.0.1",
+    "validator": "^9.1.1",
     "vinyl-source-stream": "^1.1.0",
     "webpack": "^2.4.1",
     "webpack-stream": "^3.2.0",
