--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "start": "node server.js",
     "test": "mocha",
     "snyk-protect": "snyk protect",
-    "lint": "eslint .",
     "record-build-info": "node ./bin/record-build-info",
     "wait-for-deploy": "node ./bin/wait-for-deploy",
     "prepublish": "yarn run snyk-protect",
     "build": "yarn run clean && yarn run css-build",
-    "dev": "yarn run build && yarn run lint && yarn run test && yarn run start-watchmode",
+    "dev": "yarn run build && && yarn run test && yarn run start-watchmode",
     "css-build": "./bin/build-css",
     "clean": "rm -rf public/* .port.tmp *.log build/* uploads/* test-results.xml",
     "start-watchmode": "nodemon --watch server server.js",
@@ -55,8 +54,6 @@
     "copyfiles": "^1.2.0",
     "csurf": "^1.9.0",
     "dotenv": "^4.0.0",
-    "eslint": "^3.18.0",
-    "eslint-config-google": "^0.7.1",
     "express": "^4.14.0",
     "express-request-id": "^1.4.0",
     "express-winston": "^2.3.0",
@@ -111,6 +108,7 @@
     "mocha": "^3.2.0",
     "mocha-junit-reporter": "^1.13.0",
     "nock": "^9.0.2",
+    "prettier": "1.9.0",
     "proxyquire": "^1.7.11",
     "sinon": "^1.17.7",
     "sinon-as-promised": "^4.0.3",
