Re-add the test script removed in error

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "start": "node server.js",
+    "test": "mocha",
     "test-with-coverage": "nyc --reporter=text --check-coverage --lines 85 mocha",
     "test-with-coverage-ci": "nyc --reporter=html --check-coverage --lines 85 mocha --reporter mocha-junit-reporter",
     "snyk-protect": "snyk protect",
