--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,13 @@ jobs:
       - image: circleci/node:8.4.0
     working_directory: ~/noms-digital-studio/licences
     steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - node_modules-{{ checksum "package.json" }}-{{ checksum "yarn.lock" }}
+            - node_modules-{{ checksum "package.json" }}
+            - node_modules
+            - yarn-cache
       - run:
           name: unit tests with coverage
           command: yarn run test-with-coverage-ci
@@ -52,6 +59,13 @@ jobs:
       - image: circleci/node:8.4.0
     working_directory: ~/noms-digital-studio/licences
     steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - node_modules-{{ checksum "package.json" }}-{{ checksum "yarn.lock" }}
+            - node_modules-{{ checksum "package.json" }}
+            - node_modules
+            - yarn-cache
       - run:
           name: build deployment package
           command: |
