--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
       - store_artifacts:
           path: coverage
           destination: coverage
-  deploy_and_test_mock:
+  deploy_and_accept_mock:
     docker:
       - image: circleci/node:8.4.0
     working_directory: ~/noms-digital-studio/licences
@@ -95,23 +95,23 @@ jobs:
           command: |
             curl -v -X POST --data build_parameters[CIRCLE_JOB]=accept_mock \
               https://circleci.com/api/v1.1/project/github/noms-digital-studio/licences-feature-specs?circle-token=$CIRCLE_TOKEN
-    deploy_stage:
-      docker:
-        - image: circleci/node:8.4.0
-      working_directory: ~/noms-digital-studio/licences
-      steps:
-        - run:
-            name: wait for stage deployment to complete
-            command: |
-                export GIT_REF="$CIRCLE_SHA1"
-                export APP_BASE_URL="https://licences-stage.hmpps.dsd.io/health"
-                export WAIT_DURATION="45000"
-                yarn run wait-for-deploy
-        - run:
-            name: execute feature tests - stage
-            command: |
-              curl -v -X POST --data build_parameters[CIRCLE_JOB]=accept_stage \
-                https://circleci.com/api/v1.1/project/github/noms-digital-studio/licences-feature-specs?circle-token=$CIRCLE_TOKEN
+  accept_stage:
+    docker:
+      - image: circleci/node:8.4.0
+    working_directory: ~/noms-digital-studio/licences
+    steps:
+      - run:
+          name: wait for stage deployment to complete
+          command: |
+              export GIT_REF="$CIRCLE_SHA1"
+              export APP_BASE_URL="https://licences-stage.hmpps.dsd.io/health"
+              export WAIT_DURATION="45000"
+              yarn run wait-for-deploy
+      - run:
+          name: execute feature tests - stage
+          command: |
+            curl -v -X POST --data build_parameters[CIRCLE_JOB]=accept_stage \
+              https://circleci.com/api/v1.1/project/github/noms-digital-studio/licences-feature-specs?circle-token=$CIRCLE_TOKEN
 workflows:
   version: 2
   build_test_deploy:
@@ -124,14 +124,14 @@ workflows:
       - test:
           requires:
             - build
-      - deploy_and_test_mock:
+      - deploy_and_accept_mock:
           requires:
             - test
           filters:
             branches:
               only:
                 - master
-      - deploy_stage:
+      - accept_stage:
           filters:
             branches:
               only:
