--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,7 +86,7 @@ jobs:
       - run:
           name: wait for mock deployment to complete
           command: |
-            export GIT_REF="$CIRCLE_SHA1"
+            export GIT_REF=git rev-parse "$CIRCLE_SHA1"^
             export APP_BASE_URL="https://licences-mock.hmpps.dsd.io/health"
             export WAIT_DURATION="45000"
             yarn run wait-for-deploy
