--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,7 +110,7 @@ jobs:
       - run:
           name: wait for stage deployment to complete
           command: |
-              export GIT_REF=git rev-parse "$CIRCLE_SHA1"^
+              export GIT_REF=$(git rev-parse "$CIRCLE_SHA1"^)
               export APP_BASE_URL="https://licences-stage.hmpps.dsd.io/health"
               export WAIT_DURATION="45000"
               yarn run wait-for-deploy
