--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "poll-endpoint-for": "0.0.3",
     "prompt": "^1.0.0",
     "pug": "^2.0.0-rc.4",
+    "querystring": "^0.2.0",
     "ramda": "^0.25.0",
     "request-promise": "^4.1.1",
     "require-dir": "^0.3.0",
