--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Licences Application",
   "main": "server.js",
   "engines": {
-    "node": "8.4.0"
+    "node": ">=8.4.0"
   },
   "scripts": {
     "start": "node server.js",
