Add docker support

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,17 +113,10 @@ jobs:
       - run:
           name: Build container and publish to docker hub (master only)
           command: |
-             export BUILD_NUMBER="$CIRCLE_BUILD_NUM"
-             export GIT_REF="$CIRCLE_SHA1"
-             yarn run record-build-info
              VERSION=$(egrep buildNumber build-info.json  | awk -F"\"" '{print $4}')
              GIT_REF=$(egrep gitRef build-info.json  | awk -F"\"" '{print $8}')
-
-             if [[ "${CIRCLE_BRANCH}" == "master" ]]; then
-               BUILD_VERSION=LICENCES_${VERSION}
-             else
-               BUILD_VERSION=${VERSION}.${CIRCLE_BRANCH}
-             fi
+             GIT_REF=$(egrep gitRef build-info.json  | awk -F"\"" '{print $8}')
+             BUILD_VERSION=LICENCES_${VERSION}
 
              docker build --rm=false . \
                  --build-arg BUILD_NUMBER=$VERSION \
@@ -223,6 +216,11 @@ workflows:
                 - master
       - build_docker:
           requires:
+            - deploy_and_accept_mock
+          filters:
+            branches:
+              only:
+                - master
       - hold:
           type: approval
           filters:
