Move to MOJ docker repo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.1'
 services:
   licences:
-    image: mjwillis/licences:latest
+    image: mojdigitalstudio/licences:latest
     networks:
       - hmpps
     depends_on:
