--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -120,16 +120,16 @@ jobs:
              docker build --rm=false . \
                  --build-arg BUILD_NUMBER=$VERSION \
                  --build-arg GIT_REF=$GIT_REF \
-                 --tag "mjwillis/licences:$BUILD_VERSION" \
+                 --tag "mojdigitalstudio/licences:$BUILD_VERSION" \
                  --label "maintainer=licences-team@digital.justice.gov.uk" \
                  --label "build.number=$CIRCLE_BUILD_NUM" \
                  --label "build.url=$CIRCLE_BUILD_URL" \
                  --label "build.gitref=$GIT_REF"
 
              docker login -u $DOCKER_USER -p $DOCKER_PASS
-             docker tag mjwillis/licences:$BUILD_VERSION mjwillis/licences:latest
-             docker push mjwillis/licences:$BUILD_VERSION
-             docker push mjwillis/licences:latest
+             docker tag mojdigitalstudio/licences:$BUILD_VERSION mojdigitalstudio/licences:latest
+             docker push mojdigitalstudio/licences:$BUILD_VERSION
+             docker push mojdigitalstudio/licences:latest
 
   deploy_release_to_eb:
       <<: *defaults
