Add deploy to eb into circle ci

--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,6 +1,6 @@
 branch-defaults:
   master:
-    environment: licences-dev
+    environment: licences-mock
 deploy:
   artifact: Dockerrun.aws.json
 global:
