--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -220,6 +220,9 @@ workflows:
             branches:
               only:
                 - master
+      - deploy_release_to_eb:
+          requires:
+            - build_docker
       - hold:
           type: approval
           filters:
