added validation to date field on additional condition

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "govuk_template_jinja": "^0.19.2",
     "helmet": "^3.5.0",
     "joi": "^13.2.0",
+    "joi-date-extensions": "^1.2.0",
     "jquery": "^1.12.4",
     "jsonwebtoken": "^8.1.0",
     "knex": "^0.13.0",
