--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -188,6 +188,7 @@ workflows:
   version: 2
   build_test_deploy:
     jobs:
+      - build
       - test:
           requires:
             - build
